Fix password change error overflowing input

--- a/Flats4us-frontend/src/app/settings/components/password-change/password-change.component.scss
+++ b/Flats4us-frontend/src/app/settings/components/password-change/password-change.component.scss
@@ -8,8 +8,17 @@ h2 {
 }
 
 mat-form-field {
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	margin: 2px 0;
+}
+
+mat-error {
+	white-space: nowrap;
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 ::-ms-reveal {
